UI/htdocs/static/css/base.css
/* Import Google Fonts that have a Metro-Like style */
/* @import url(http://fonts.googleapis.com/css?family=Josefin+Slab); */
/* @import url(http://fonts.googleapis.com/css?family=Antic); */

html, body {
	width:100%;
	height:100%;
	padding:0px;
	text-align:center;
	margin:0px;
	font-size:13pt;
	font-family: Futura, "Century Gothic", AppleGothic, sans-serif, Lucida Sans,Lucida Grande,Calibri, Arial, Verdana, Colab, moderna;
}

#navigationBar {
    text-align:left;
    font-family:Arial,Verdana;
    position:fixed; 
    font-size:1.0em;
    top:0px;
    left:0px;
    width:100%;
    height:40px;
    z-index:100;
    color:white;
    background-color:#0072c6;
    padding:0px 10px 10px 10px;
    margin:0px;
}

#navigationBar h1 {
    color:white;
    margin:5px;
    font-family:Futura; 
    font-size:1.6em; 
    display:inline;
}

#navigationBar ul {
    list-style-type:none;
    background-color:none;  
    margin:auto;
    display:inline;
}

#navigationBar li {
    float:left;
    display:block;
    height:100%;
}

#navigationBar li:hover {
    background: #88bfe8; /* Old browsers */
    background: -moz-linear-gradient(top,  #88bfe8 0%, #70b0e0 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#88bfe8), color-stop(100%,#70b0e0)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top,  #88bfe8 0%,#70b0e0 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top,  #88bfe8 0%,#70b0e0 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top,  #88bfe8 0%,#70b0e0 100%); /* IE10+ */
    background: linear-gradient(to bottom,  #88bfe8 0%,#70b0e0 100%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#88bfe8', endColorstr='#70b0e0',GradientType=0 ); /* IE6-9 */
}

#navigationBar li a, #navigationBar li a:visited {
    display:block;
    width:100%;
    height:100%;
    padding:15px;
    color:white;
    text-decoration:none;
}

#contentPane {
    position:relative;
    margin:0px auto;
    left:0px;
    top:80px;
    text-align:center;
    color:#0072c6;
    padding:0px;
    width:1200px;
}

#contentPane #leftColumn, #contentPane #rightColumn {
    width:50%;
}

#contentPane #leftColumn {
    float:left;
}

#contentPane #rightColumn {
    float:right;
}

#contentPane .widget {
    width:500px; 
}

